--- a/src/homepage/homepage.scss
+++ b/src/homepage/homepage.scss
@@ -6,11 +6,12 @@
         display: flex;
         align-items: center;
         flex-direction: column;
+        width: 51.5%;
 
         .search {
                 display: flex;
                 justify-content: flex-start;
-                width: 98.6%;
+                width: 97.5%;
                 margin-bottom: 1em;
         
                 input {
@@ -20,14 +21,10 @@
 
         .row {
             display: grid;
-            grid-template-columns: 5em 4em 5em repeat(4, 3em) 14em;
+            grid-template-columns: 5em 4em 5em repeat(5, 3em) 14em;
             gap: 1em;
             align-items: center;
             justify-content: center;
-
-            .totalActivity {
-                justify-self: center;
-            }
 
             .boxes {
                 display: flex;
@@ -53,12 +50,11 @@
             width: 100%;
 
             .column-header {
-                    display: grid;
-                    grid-template-columns: repeat(2, 5em) 4.6em 4.2em 2.6em 4.3em 2.4em;
-                    gap: 0.6em;
-                    align-items: center;
-                    font-size: 1em;
-                    margin-right: 1em;
+                display: grid;
+                grid-template-columns: repeat(2, 5.5em) 4em 5.6em 2em 5em 2.5em 4.5em;
+                gap: 0.35em;
+                font-size: 1em;
+                margin-right: 0.2em;
             }
 
             .days-header {
