--- a/src/homepage/homepage.scss
+++ b/src/homepage/homepage.scss
@@ -9,10 +9,10 @@
         width: 51.5%;
 
         .search {
-                display: flex;
-                justify-content: flex-start;
-                width: 97.5%;
-                margin-bottom: 1em;
+            display: flex;
+            justify-content: flex-start;
+            width: 50em;
+            margin-bottom: 1em;
         
                 input {
                     margin-left: 0.5em;
@@ -47,7 +47,7 @@
             margin-bottom: 0.75em;
             font-weight: bold;
             align-items: center;
-            width: 100%;
+            width: 51.8em;
 
             .column-header {
                 display: grid;
@@ -59,7 +59,7 @@
 
             .days-header {
                 display: grid;
-                grid-template-columns: 2em 3.2em 2.3em 2.8em 2.4em 3.1em 1.7em;
+                grid-template-columns: 2em 3em 2.5em 2.6em 2.4em 3.1em 1.7em;
                 font-size: 0.8em;
             }
         }
